Fix search result titles not showing bold font for pages with titles in other languages

--- a/packages/components/Atoms/Global/scss/generic/_languages.scss
+++ b/packages/components/Atoms/Global/scss/generic/_languages.scss
@@ -24,8 +24,7 @@
   }
 
   .rpl-markup__inner b, 
-  .rpl-markup__inner strong,
-  .rpl-search-result__heading {
+  .rpl-markup__inner strong {
     font-family: #{$font-family} !important;
     font-weight: 700;
   }
